# cavas

./: Dockerfile  Lasermessung.py  pyproject.toml  requirements.txt  run.sh  setup_incus.sh  setup_stellarnet.sh  spherical_lens.json
S231125_waveshare_AS7341_Syns_Laser_old/: S231125_waveshare_AS7341_Syns_Laser.ino
data/: measurement_settings.json  spherical_lens.json
examples/: plot_generation.py  run_measurement.py
scripts/: setup_stellarnet.sh
src/: Lasermessung.py  lense_generation.py
src/cavas/: backup_service.py  lasers.py  lense_generation.py  live_plotter.py  measurement.py  plot_generation.py  spectrum_plot.py
tests/: test_read_settings.py
